--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-query": "^4.0.0",
     "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-query": "^1.2.9"
   }
 }
